# calm

./: .gitignore  README.md  pyproject.toml
calm/: app.py  auth.py  calendar_service.py  cli.py  config.py
calm/commands/: agent.py  chat.py  configure.py  events.py
calm/core/: display.py  onboarding.py  utils.py
calm/infra/: auth.py  gemini_auth.py  settings.py
calm/services/: calendar_service.py  gemini_agent_service.py  gemini_service.py
